<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login"
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:background="@drawable/shadow_layer"
        android:alpha="0.5"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="@id/cl_login"
        app:layout_constraintStart_toStartOf="@id/cl_login"
        app:layout_constraintEnd_toEndOf="@id/cl_login"/>

    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="#595858"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        app:layout_constraintStart_toStartOf="@id/cl_login"
        app:layout_constraintEnd_toEndOf="@id/cl_login"/>
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        app:startIconDrawable="@drawable/email"
        android:hint="@string/email_phone"
        android:background="#DBDBDB"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/tv_signin"
        app:layout_constraintStart_toStartOf="@id/cl_login"
        app:layout_constraintEnd_toEndOf="@id/cl_login">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        app:startIconDrawable="@drawable/lock"
        android:hint="@string/password"
        android:background="#DBDBDB"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        app:layout_constraintStart_toStartOf="@id/cl_login"
        app:layout_constraintEnd_toEndOf="@id/cl_login">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/button_selector"
        android:text="@string/login"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        app:layout_constraintStart_toStartOf="@id/cl_login"
        app:layout_constraintEnd_toEndOf="@id/cl_login"/>

    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pas"
        android:layout_marginTop="20dp"
        android:textColor="#595858"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/cl_login"
        app:layout_constraintEnd_toEndOf="@id/cl_login"/>

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/signup_w"
        android:textColor="#595858"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot"
        app:layout_constraintStart_toStartOf="@id/cl_login"
        app:layout_constraintEnd_toEndOf="@id/cl_login"/>

</androidx.constraintlayout.widget.ConstraintLayout>